--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Lorem ipsum"
-description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
-repository               : "RayeRen/acad-homepage.github.io"
+title                    : "Kunyu Ni's Homepage"
+description              : "Kunyu Ni's Homepage-2"
+repository               : "KunyuNi/KunyuNi.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
