--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Kunyu Ni（倪坤宇）"
-  avatar           : "images/kyni.image"
+  avatar           : "images/kyni.jpg"
   bio              : "Ocean University of China"
   location         : "Qingdao, China"
   employer         :
