--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : "Qingdao, China"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=wM8rqfwAAAAJ&hl=zh-CN"
+  googlescholar    : "https://scholar.google.com/citations?user=wM8rqfwAAAAJ"
   email            : "kyni.ouc@gmail.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
